Algumas mudanças nas tips e tirando overflow-x para n bugar com a dica do tema

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,11 @@
   font-family: -apple-system, 'Work Sans', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body, 
+html {
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
